# Museq

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  THIRDPARTY_NOTICES.txt  TODO.md  gensine  song.json  song.museq  test_compact.museq  test_features.museq  test_filter_lfo.museq  test_functions.museq  test_loops.museq  test_noteparser.cpp  test_parallel_pianos.museq  test_parallel_soundfont.museq  test_rest.museq  test_simple_parallel.museq  test_simple_parallel_offset.museq  test_soundfont_portamento.museq  test_stereo.museq  test_templates.museq  windows-toolchain.cmake
.github/workflows/: build.yml
backup/: AdsrEnvelope.h  AudioRenderer.cpp  AudioRenderer.h  Instrument.cpp  Instrument.h  JsonSerializer.cpp  Mp3Writer.cpp  Note.cpp  Note.h  NoteParser.h  OggWriter.cpp  OggWriter.h  ScriptParser.cpp  ScriptParser.h  Sequence.cpp  Sequence.h  WavWriter.cpp  WavWriter.h  Waveform.h  main.cpp
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/advanced_editor_20260207/: index.md  spec.md
conductor/archive/asset_management_20260206/: plan.md
conductor/archive/duration_notation_20260208/: index.md  plan.md  spec.md
conductor/archive/font_scaling_20260208/: index.md  plan.md  spec.md
conductor/archive/multi_tab_editor_20260208/: index.md  plan.md  spec.md
conductor/archive/muqomposer_refinement_20260206/: plan.md
conductor/archive/music_theory_20260206/: index.md
conductor/archive/notes_float_fix_20260207/: plan.md  spec.md
conductor/archive/sound_fixes_2_20260207/: plan.md
conductor/archive/splash_aesthetic_20260207/: index.md  plan.md
conductor/archive/splash_refinement_20260207/: index.md  spec.md
conductor/archive/studio_asset_revision_20260207/: plan.md  spec.md
conductor/archive/studio_ui_alignment_fix_20260207/: spec.md
conductor/tracks/advanced_editor_20260207/: plan.md
conductor/tracks/asset_management_20260206/: index.md  plan.md  spec.md
conductor/tracks/duration_notation_20260208/: plan.md
conductor/tracks/multi_tab_editor_20260208/: plan.md
conductor/tracks/muqomposer_refinement_20260206/: index.md  plan.md  spec.md
conductor/tracks/music_theory_20260206/: plan.md  spec.md
conductor/tracks/notes_float_fix_20260207/: plan.md
conductor/tracks/sound_fixes_2_20260207/: index.md  plan.md  spec.md
conductor/tracks/splash_aesthetic_20260207/: plan.md  spec.md
conductor/tracks/splash_refinement_20260207/: plan.md
conductor/tracks/studio_asset_revision_20260207/: index.md  plan.md
conductor/tracks/studio_enhancements_20260207/: index.md  plan.md  spec.md
conductor/tracks/studio_ui_alignment_fix_20260207/: plan.md
conductor/tracks/studio_ui_refinement_20260207/: index.md  plan.md  spec.md
docs/: CMAKE_ARCHITECTURE.md
gui_prototype/: CMakeLists.txt  README.md  main.cpp
muqomposer/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  README.md  Settings.h  SplashUtils.h  main.cpp
muscripts/: bad_lib.museq  chain_b.museq  electronic_house.museq  lib_conflict.museq  repro_bug.museq  seven_nation_army.museq  song.museq  test_chords.museq  test_compact.museq  test_conflict.museq  test_drums_v2.museq  test_effects.museq  test_functions.museq  test_gain.museq  test_globals.museq  test_import.museq  test_leads_v2.museq  test_loops.museq  test_nesting.museq  test_offset.museq  test_pads_v2.museq  test_parallel_pianos.museq  test_parallel_soundfont.museq  test_phase.museq  test_rest.museq  test_sfx_v2.museq  test_simple_parallel.museq  test_simple_parallel_offset.museq  test_soundfont_effects.museq  test_soundfont_envelope.museq  test_soundfont_portamento.museq  test_stereo.museq  test_synth_all.museq  test_synth_portamento.museq  test_templates.museq  test_theory_integration.museq
musynths/: drums.museq  leads.museq  pads.museq  sfx.museq
src/: AdsrEnvelope.cpp  AudioPlayer.cpp  AudioPlayer.h  AudioRenderer.cpp  AudioRenderer.h  AudioUtils.cpp  AudioUtils.h  Chord.cpp  Chord.h  Effect.h  Instrument.cpp  Instrument.h  JsonSerializer.cpp  JsonSerializer.h  Mp3Writer.cpp  Mp3Writer.h  Note.cpp  Note.h  NoteParser.cpp  NoteParser.h  OggWriter.cpp  OggWriter.h  ReverbProcessor.h  Sampler.cpp  Sampler.h  Scale.cpp  Scale.h  ScriptParser.cpp  ScriptParser.h  Song.h  SongElement.h  Voice.cpp  Voice.h  WavWriter.cpp  main.cpp  museq.rc
testing/: test_asset_check.cpp  test_asset_clear.cpp  test_asset_filter.cpp  test_asset_manager.cpp  test_asset_synths.cpp  test_asset_tree.cpp  test_conflict_resolution.cpp  test_duration_notation.cpp  test_fft.cpp  test_gui_resources.cpp  test_music_theory.cpp  test_note_params.cpp  test_notes_float.cpp  test_script_scale.cpp  test_sequence_feature.cpp  test_smart_insertion.cpp  test_splash_scaling.cpp  test_tempo_consistency.cpp
